# mslice

./: CMakeLists.txt  README.md
hdr/: mslice.hpp
test/: regression.cpp  speed.cpp
